# imageEditor

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  build-SDL-libs.sh  build_and_run.sh  custom_server.py  main.cpp  web_build.sh
build_web_files/: imageEditor_web.html  imageEditor_web.js  imageEditor_web.wasm
emscripten/: shell_minimal.html
